# corse-work

./: .env.template  README.md  pyproject.toml
apps/: __init__.py
apps/clients/: admin.py  apps.py  models.py  urls.py  views.py
apps/clients/management/commands/: createintervals.py
apps/clients/migrations/: 0001_initial.py  0002_initial.py
apps/clients/templates/clients/: client_detail.html  client_form.html  client_list.html
apps/mailing/: admin.py  apps.py  forms.py  tasks.py  urls.py
apps/mailing/migrations/: 0001_initial.py  0002_initial.py
apps/mailing/models/: __init__.py  mailing.py  mailing_try.py  message.py
apps/mailing/templates/mailing/: mailing_detail.html  mailing_form.html  mailing_list.html
apps/mailing/templates/mailing/message/: message_detail.html  message_form.html  message_list.html
apps/mailing/views/: __init__.py  mailing.py  message.py  results.py
apps/main/: models.py  permissions.py  urls.py  views.py
apps/main/management/commands/: init.py
apps/main/templates/cotton/: card.html
apps/main/templates/main/: base.html  index.html
apps/main/templatetags/: custom_tags.py
apps/posts/: apps.py  models.py
apps/posts/management/commands/: createposts.py
apps/posts/migrations/: 0001_initial.py
apps/users/: admin.py  apps.py  models.py  urls.py  views.py
apps/users/management/commands/: creategroup.py  createmanager.py
apps/users/migrations/: 0001_initial.py
apps/users/templates/users/: login.html  register.html  reset-password.html  user_list.html
config/: celery.py  settings.py  urls.py
(+2 files in other folders)
