[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Lewbertsklol <lewbertsklol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-beat = "^2.7.0"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
django-celery-results = "^2.5.1"
django-cotton = "^0.9.33"
django-widget-tweaks = "^1.5.0"
pillow = "^10.4.0"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
